--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,32 @@
 
 </head>
 <body>
-    
+    <nav class="mainnavigation">
+        <ul>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="media.html">Home Page</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li>The boring stuff
+                <ul>
+                    <li><a href="contact.html">Call me</a></li>
+                    <li>            <a href="films.html">Click me!</a>
+                    </li>
+                    <li>            <a href="inprint.html">Click me!</a>
+                    </li>
+                    <li>            <a href="privacy.html">Click me!</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <article class="box">
+            Just a plain box and this is my first portfolio website. 
+        </article>
+    <div class="rotator">
+        Just a plain box and this is my first portfolio website.
+    </div>
+    <button class="button">
+        call me
+    </button>
 </body>
 </html>
