--- a/3d.html
+++ b/3d.html
@@ -5,14 +5,19 @@
     <title>My Room</title>
 </head>
 <body>
-    <a-scene>
+    <a-scene reflection="directionalLight:a-light#dirlight;">
         <!--Asset Management System-->
         <a-assets>
+            <img id="Sci_Fi" src="images/TexturesCom_Fabric_SciFi7_512_albedo.jpg">
+            <img id="Sci_Fi_NRM" src="images/TexturesCom_Fabric_SciFi7_512_normal.jpg">
+            <img id="Pillow" src="images/TexturesCom_Fabric_Cotton_512_albedo.jpg">
+            <img id="Pillow_NRM" src="images/TexturesCom_Fabric_Cotton_512_normal.jpg">
             <img id="Sunset_sky" src="images/Free Panorama in Park.jpg">
             <img id="Wall" src="images/TexturesCom_Wall_Stucco4_2x2_512_albedo.jpg">
             <img id="Wall_NRM" src="images/TexturesCom_Wall_Stucco4_2x2_512_normal.jpg">
             <img id="Floor" src="images/TexturesCom_VersaillesParquet10_512_albedo.jpg">
             <img id="Floor_NRM" src="images/TexturesCom_VersaillesParquet10_512_normal.jpg">
+            <img id="Poster" src="images/poster.jpg">
         </a-assets>
 
         <!--Sky-->
@@ -25,6 +30,8 @@
                            repeat: 5 5;
                            normal-map: #Floor_NRM;
                            normal-texture-repeat: 5 5;
+                           normal-scale: 1 -1;
+                           roughness: 0.1;
                            "
                  scale="100 100 1"
                  rotation="-90 0 0"
@@ -39,6 +46,7 @@
                material="src: #Wall;
                          repeat: 5 5;
                          normal-map: #Wall_NRM;
+                         color: #257d5a;
                          normal-texture-repeat: 5 5;
                          roughness: 0.9;
                          normal-scale: 1 -1">
@@ -49,6 +57,7 @@
                position="0 15 50"
                material="src: #Wall;
                          repeat: 5 5;
+                         color: #257d5a;
                          normal-texture-repeat: 5 5;
                          roughness: 0.9;
                          normal-map: #Wall_NRM;
@@ -59,12 +68,7 @@
         depth="0.1"
         rotation="0 90 0"
         position="50 15 0"
-        material="src: #Wall;
-                         repeat: 5 5;
-                         normal-texture-repeat: 5 5;
-                         roughness: 0.9;
-                         normal-map: #Wall_NRM;
-                         normal-texture-repeat: 5 5">
+        color="#154733">
         </a-box>
 
         <!--Window wall-->
@@ -73,24 +77,14 @@
         depth="0.1"
         rotation="0 90 0"
         position="-50 -2.5 0"
-        material="src: #Wall;
-                         repeat: 5 5;
-                         normal-texture-repeat: 5 5;
-                         roughness: 0.9;
-                         normal-map: #Wall_NRM;
-                         normal-texture-repeat: 5 5">
+        color="#154733">
         </a-box>
         <a-box width="100"
         height="10"
         depth="0.1"
         rotation="0 90 0"
         position="-50 35 0"
-        material="src: #Wall;
-                         repeat: 5 5;
-                         normal-texture-repeat: 5 5;
-                         roughness: 0.9;
-                         normal-map: #Wall_NRM;
-                         normal-texture-repeat: 5 5">
+        color="#154733">
         </a-box>
         <!--Window Seperators-->
         <a-box width="5"
@@ -98,36 +92,21 @@
         depth="0.1"
         rotation="0 90 0"
         position="-50 15 0"
-        material="src: #Wall;
-                         repeat: 5 5;
-                         normal-texture-repeat: 5 5;
-                         roughness: 0.9;
-                         normal-map: #Wall_NRM;
-                         normal-texture-repeat: 5 5">
+        color="#154733">
         </a-box>
         <a-box width="5"
         height="50"
         depth="0.1"
         rotation="0 90 0"
         position="-50 15 47.5"
-        material="src: #Wall;
-                         repeat: 5 5;
-                         normal-texture-repeat: 5 5;
-                         roughness: 0.9;
-                         normal-map: #Wall_NRM;
-                         normal-texture-repeat: 5 5">
+        color="#154733">
         </a-box>
         <a-box width="5"
         height="50"
         depth="0.1"
         rotation="0 90 0"
         position="-50 15 -47.5"
-        material="src: #Wall;
-                         repeat: 5 5;
-                         normal-texture-repeat: 5 5;
-                         roughness: 0.9;
-                         normal-map: #Wall_NRM;
-                         normal-texture-repeat: 5 5">
+        color="#154733">
         </a-box>
         <!--Window self-->
         <a-box width="5"
@@ -135,7 +114,7 @@
         depth="1"
         rotation="90 0 0"
         position="-47.5 4 -24"
-        color="#D9EAEE">
+        color="#a1c2b5">
         </a-box>
         <!--Window self-->
         <a-box width="5"
@@ -143,23 +122,217 @@
         depth="1"
         rotation="90 0 0"
         position="-47.5 4 24"
-        color="#D9EAEE">
+        color="#a1c2b5">
         </a-box>
 
         <!--Ceiling-->
+        <a-light type="point" 
+                 intensity="0.5"
+                 position="0 10 0">
+        </a-light>
         <a-box width="100"
         height="100"
         depth="0.1"
         rotation="90 0 0"
         position="0 40 0"
-        color="#F9D6C6">
-            <!--Light
+        color="#154733">
+            <!--Light-->
             <a-light type="ambient"
-                     intensity="0.85">
+                     intensity="1.3">
             </a-light>
-            -->
         </a-box>
 
+        <!--Bed-->
+        <a-entity position="0 0 -35">
+            <!--Base Front-->
+            <!--Outer Rails-->
+            <a-cylinder material="color: #000000;"
+                        height="8"
+                        position="0 -4 -10"
+                        scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-sphere color="#000000"
+                    position="0 4 -10"
+                    scale="0.5 0.5 0.5"
+                    >
+            </a-sphere>
+            <a-cylinder material="color: #000000;"
+            height="8"
+            position="20 -4 -10"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-sphere color="#000000"
+                position="20 4 -10"
+                scale="0.5 0.5 0.5"
+                >
+            </a-sphere>
+            <!--Inner Rails-->
+            <a-cylinder material="color: #000000;"
+            height="4"
+            position="4 -2 -10"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-cylinder material="color: #000000;"
+            height="4"
+            position="8 -2 -10"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-cylinder material="color: #000000;"
+            height="4"
+            position="12 -2 -10"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-cylinder material="color: #000000;"
+            height="4"
+            position="16 -2 -10"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <!--Top-Bottom Rails-->
+            <a-cylinder material="color: #000000;"
+            height="10"
+            position="10 2 -10"
+            rotation="0 0 90"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-cylinder material="color: #000000;"
+            height="10"
+            position="10 -6 -10"
+            rotation="0 0 90"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+
+            <!--Base Back-->
+            <!--Outer Rails-->
+            <a-cylinder material="color: #000000;"
+                        height="8"
+                        position="0 -4 15"
+                        scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-sphere color="#000000"
+                    position="0 4 15"
+                    scale="0.5 0.5 0.5"
+                    >
+            </a-sphere>
+            <a-cylinder material="color: #000000;"
+            height="8"
+            position="20 -4 15"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-sphere color="#000000"
+                position="20 4 15"
+                scale="0.5 0.5 0.5"
+                >
+            </a-sphere>
+            <!--Inner Rails-->
+            <a-cylinder material="color: #000000;"
+            height="4"
+            position="4 -2 15"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-cylinder material="color: #000000;"
+            height="4"
+            position="8 -2 15"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-cylinder material="color: #000000;"
+            height="4"
+            position="12 -2 15"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-cylinder material="color: #000000;"
+            height="4"
+            position="16 -2 15"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <!--Top-Bottom Rails-->
+            <a-cylinder material="color: #000000;"
+            height="10"
+            position="10 2 15"
+            rotation="0 0 90"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+            <a-cylinder material="color: #000000;"
+            height="10"
+            position="10 -6 15"
+            rotation="0 0 90"
+            scale="0.2 2 0.2">
+            </a-cylinder>
+
+            <!--Bottom Base-->
+            <a-box color="#000000"
+                height="0.5"
+                width="22"
+                depth="25"
+                position="10 -6 2.5"
+                >
+            </a-box>
+
+            <!--Matress-->
+            <a-box color="#FFFFFF"
+                height="2"
+                width="22"
+                depth="25"
+                position="10 -4.75 2.5"
+                >
+            </a-box>
+        </a-entity>
+
+        <!--Pillow-->
+        <a-entity>
+            <!--
+            <a-curvedimage material="src: #Pillow;
+                                     repeat: 5 5;
+                                     color: #FFFFFF;
+                                     normal-map: #Pillow_NRM;
+                                     normal-texture-repeat: 5 5;"
+                                     theta-length="85"
+                                     radius="4"
+                                     height="3"
+                                     rotation="0 0 0">
+            </a-curvedimage>
+            <a-curvedimage material="src: #Pillow;
+                                     repeat: 5 5;
+                                     normal-map: #Pillow_NRM;
+                                     normal-texture-repeat: 5 5;"
+                                     theta-length="85"
+                                     radius="4"
+                                     height="3"
+                                     rotation="0 180 0"
+                                     position="3.97 0 4.4">
+            </a-curvedimage>
+            -->
+        </a-entity>
+
+        <!--Poster-->
+        <a-image material="src: #Poster;"
+               width="1.89"
+               height="2.67"
+               scale="8 8 1"
+               position="-5 10 -49.5">
+        </a-image>
+
+        <!--Disco Ball-->
+        <a-sphere material="src: #Sci_Fi;
+                            normal-map: #Sci_Fi_NRM;
+                            color: #948ca3;
+                            repeat: 5 5;
+                            normal-texture-repeat: 5 5;
+                            roughness: 0.1;
+                            normal-scale: 1 -1"
+                  animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
+                  position="0 25 0"
+                  scale="5 5 5">
+        </a-sphere>
+
+        <!--Library-->
+        <a-entity>
+            <a-box height="35"
+                   width="15"
+                   depth="5"
+                   material="color: #827965;"
+                   position="35 5 -42.5">
+            </a-box>
+        </a-entity>
     </a-scene>
 </body>
 </html>
